fix: correct position offset of CollapsedDrawer and track height of ScoreRange in Firefox

--- a/src/components/common/Questionnaire/CollapsedDrawer/CollapsedDrawer.module.css
+++ b/src/components/common/Questionnaire/CollapsedDrawer/CollapsedDrawer.module.css
@@ -33,3 +33,9 @@
   box-shadow: 0px 0px 7px 0px main-black;
   transform: translateX(0px);
 }
+
+@-moz-document url-prefix() {
+  .container {
+    transform: translateX(-100%) translateY(-50%);
+  }
+}
